# item-manager

./: CHANGELOG.md  README.md  default.nix  docker-compose.yml
app/backend/: Setup.hs  backend.cabal
app/backend/db/: db.sql
app/backend/src/: Main.hs
app/backend/src/DB/: Category.hs  Item.hs
app/backend/src/Server/: Categories.hs  Items.hs  Server.hs
app/backend/src/Types/: App.hs  Category.hs  Env.hs  Item.hs
app/backend/src/Types/API/: API.hs  Categories.hs  Items.hs
app/backend/test/: MainSpec.hs
app/backend/test/Types/: CategorySpec.hs  ItemSpec.hs
app/common/: common.cabal
app/common/Data/Text/: Show.hs
app/common/test/: MainSpec.hs
app/frontend/: frontend.cabal
app/frontend/data/: index.html
app/frontend/src/: Main.hs
app/frontend/src/Service/: Category.hs  Item.hs
app/frontend/src/Types/: Category.hs  Item.hs
app/frontend/src/UI/Bootstrap/: Button.hs  TabbedNav.hs
app/frontend/test/Types/: CategorySpec.hs  ItemSpec.hs
backend/: backend.cabal
common/: common.cabal
docker/backend/: Dockerfile  dev.Dockerfile
docker/frontend/: Dockerfile  dev.Dockerfile
frontend/: frontend.cabal
frontend/src/: Main.hs
scripts/: build.sh  ghcid-backend.sh  ghcid-frontend.sh  shell.sh
