cabal-version:       2.4
name:                frontend
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-files:          *.html
data-dir:            data

executable frontend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.16, common, reflex-dom
  hs-source-dirs:      src
  default-language:    Haskell2010
