cabal-version:       2.4
name:                backend
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable backend
  main-is:             Main.hs
  other-modules:       DB.Category
                     , DB.Item
                     , Server.Categories
                     , Server.Items
                     , Server.Server
                     , Types.API.API
                     , Types.API.Categories
                     , Types.API.Items
                     , Types.App
                     , Types.Env
                     , Types.Category
                     , Types.Item
  -- other-extensions:
  build-depends:       base >=4.12 && <4.16
                      , aeson
                      , common
                      , servant
                      , servant-server
                      , sqlite-simple
                      , text
                      , transformers
                      , wai
                      , wai-cors
                      , warp
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite backend-test
  hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Spec.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base >= 4.7 && < 5
    , aeson
    , directory
    , hspec
    , hspec-core
    , hspec-expectations
    , hspec-wai
    , HUnit
    , QuickCheck
    , quickcheck-instances
    , servant
    , servant-client
    , servant-quickcheck
    , servant-server
    , sqlite-simple
    , text
    , transformers
  other-modules:       DB.Category
                     , DB.Item
                     , MainSpec
                     , Server.Categories
                     , Server.Items
                     , Server.Server
                     , Types.API.API
                     , Types.API.Categories
                     , Types.API.Items
                     , Types.App
                     , Types.Category
                     , Types.CategorySpec
                     , Types.Env
                     , Types.Item
                     , Types.ItemSpec