cabal-version:       2.4
name:                frontend
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-files:          *.html
data-dir:            data

executable frontend
  main-is:             Main.hs
  other-modules:       Service.Item
  -- other-extensions:
  build-depends:       base >=4.12 && <4.16, aeson, bytestring, common, containers, reflex-dom, text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite frontend-test
  hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Spec.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base >= 4.7 && < 5
    , common
    , hspec
    , hspec-core
    , hspec-expectations
    , HUnit
    , QuickCheck
  other-modules:
    MainSpec